some styling. conts of js. lots of errors so far

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
         <h1>Music Survey</h1>
         <p>Tell us about your Music Taste!</p>
     </header>
-
+<br>
 <div class="survey-body">
     <div class="q1">
         <h3>What is your age?</h3>
-            <ul>
+            <ul class="op1">
                 <li>18-25 Years Old</li>
                 <li>26-40 Years Old</li>
                 <li>40-60 Years Old</li>
                 <li>I am an Ancient Artifact</li>
             </ul>
         </div>
-
+<br>
     <div class="q2">
     <h3>What kind of music do you like most?</h3>
-        <ul>
+        <ul class="op2">
             <li>Pop</li>
             <li>Rock</li>
             <li>Metal</li>
@@ -35,33 +35,34 @@
             <li>R&B</li>
         </ul>
     </div>
-
+<br>
     <div class="q3">
         <h3>How often do you listen to music?</h3>
-            <ul>
+            <ul class="op3">
                 <li>1-2 time a week</li>
                 <li>3-4 times a week</li>
                 <li>Everyday</li>
             </ul>
         </div>
-
+<br>
     <div class="q4">
         <h3>Does Music Help you Focus?</h3>
-            <ul>
+            <ul class="op4">
                 <li>Yes</li>
                 <li>Sometimes</li>
                 <li>No</li>
             </ul>
         </div>
-
+<br>
     <div class="q5">
         <h3>Do you often daydream while listening to music?</h3>
-            <ul>     
+            <ul class="op5">     
                 <li>Yes</li>
                 <li>Sometimes</li>
                 <li>No</li>
             </ul>
         </div>
 </div>
+<script src="index.js"></script>
 </body>
 </html>
