--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   </head>
 
 <body>
-    <header>
-        <h1>Music Survey</h1>
-        <p>Tell us about your Music Taste!</p>
-    </header>
-<br>
+    <video autoplay muted loop id="vid">
+        <source src="C:\Users\Matthew Sparks\Downloads\Pioneer DJ PLX-500 - Cinematic B-Roll (Demo Reel) (2).mp4" type="video/mp4"></video>
+
+
 <div class="survey-body">
+
     <div class="q1">
-        <h3>What is your age?</h3>
+        <h3>What is your age?</h3><br>
             <ul class="op1">
                 <li>18-25 Years Old</li>
                 <li>26-40 Years Old</li>
@@ -25,8 +25,9 @@
             </ul>
         </div>
 <br>
+
     <div class="q2">
-    <h3>What kind of music do you like most?</h3>
+    <h3>What kind of music do you like most?</h3><br>
         <ul class="op2">
             <li>Pop</li>
             <li>Rock</li>
@@ -36,8 +37,9 @@
         </ul>
     </div>
 <br>
+
     <div class="q3">
-        <h3>How often do you listen to music?</h3>
+        <h3>How often do you listen to music?</h3><br>
             <ul class="op3">
                 <li>1-2 time a week</li>
                 <li>3-4 times a week</li>
@@ -45,8 +47,9 @@
             </ul>
         </div>
 <br>
+
     <div class="q4">
-        <h3>Does Music Help you Focus?</h3>
+        <h3>Does Music Help you Focus?</h3><br>
             <ul class="op4">
                 <li>Yes</li>
                 <li>Sometimes</li>
@@ -54,14 +57,22 @@
             </ul>
         </div>
 <br>
+
     <div class="q5">
-        <h3>Do you often daydream while listening to music?</h3>
+        <h3>Do you often daydream while listening to music?</h3><br>
             <ul class="op5">     
                 <li>Yes</li>
                 <li>Sometimes</li>
                 <li>No</li>
             </ul>
         </div>
+
+        <div class="thanks">
+            <h2>Thank you for participating!</h2>
+            <br>
+            <p>The results of this survey will be public in a few weeks!</p>
+        </div>
+
 </div>
 <script src="index.js"></script>
 </body>
