--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <video autoplay muted loop id="vid">
-        <source src="C:\Users\Matthew Sparks\Downloads\Pioneer DJ PLX-500 - Cinematic B-Roll (Demo Reel) (2).mp4" type="video/mp4"></video>
+        <source src=https://res.cloudinary.com/damesaeb6/video/upload/v1664470191/Pioneer_DJ_PLX-500_-_Cinematic_B-Roll_Demo_Reel_2_iafkjh.mp4 type="video/mp4"></video>
 
 
 <div class="survey-body">
